--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "/public/build"
   ],
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@remix-run/node": "^1.4.1",
     "@remix-run/react": "^1.4.1",
     "@remix-run/serve": "^1.4.1",
