--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@remix-run/react": "^1.4.1",
     "@remix-run/serve": "^1.4.1",
     "@remix-run/server-runtime": "^1.4.1",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0",
